local python server for hosting geojson

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>A Leaflet map!</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>A Leaflet map!</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <style>
     body, html {
@@ -37,11 +37,11 @@
       minZoom: 9
     }).addTo(map);
 
-    // // load GeoJSON from an external file
-    // $.getJSON('rodents.json', function(data) {
-    //   // add GeoJSON layer to the map once the file is loaded
-    //   L.geoJSON(data).addTo(map);
-    // });
+    // load GeoJSON from an external file
+    $.getJSON('rodents.geojson', function(data) {
+      // add GeoJSON layer to the map once the file is loaded
+      L.geoJSON(data).addTo(map);
+    });
 
     // $.getJSON("rodents.geojson", function(data) {
     //   var ratIcon = L.icon({
