--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <title>A Leaflet map!</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./Leaflet.markercluster-1.0.5/leaflet.markercluster.js"></script>
+    <script src="./Leaflet.heat-0.2.0/leaflet-heat.js"></script>
 
   <style>
     body, html {
@@ -37,12 +41,7 @@
       minZoom: 9
     }).addTo(map);
 
-    // load GeoJSON from an external file
-    $.getJSON('rodents.geojson', function(data) {
-      // add GeoJSON layer to the map once the file is loaded
-      L.geoJSON(data).addTo(map);
-    });
-
+    // // Rat gif
     // $.getJSON("rodents.geojson", function(data) {
     //   var ratIcon = L.icon({
     //     iconUrl: 'rat.gif',
@@ -55,6 +54,68 @@
     //     }
     //   }).addTo(map);
     // });
+
+    $.getJSON("neighborhoods.geojson",function(hoodData){
+      L.geoJson( hoodData, {
+        style: function(feature){
+          var fillColor, density = feature.properties.density;
+          if ( density > 80 ) fillColor = "#006837";
+          else if ( density > 40 ) fillColor = "#31a354";
+          else if ( density > 20 ) fillColor = "#78c679";
+          else if ( density > 10 ) fillColor = "#c2e699";
+          else if ( density > 0 ) fillColor = "#ffffcc";
+          else fillColor = "#f7f7f7";  // no data
+          return { color: "#999", weight: 1, fillColor: fillColor, fillOpacity: .6 };
+        },
+        onEachFeature: function( feature, layer ){
+          layer.bindPopup( "<strong>" + feature.properties.Name + "</strong><br/>" + feature.properties.density + " rats per square mile" )
+        }
+      }).addTo(map);
+    });
+
+    // // Rat png (Pop up and Cluster)
+    // $.getJSON("rodents.geojson", function(data) {
+    //   var ratIcon = L.icon({
+    //     iconUrl: 'http://andywoodruff.com/maptime-leaflet/rat.png',
+    //     iconSize: [60,50]
+    //   });
+    //
+    // //   // Rat png: Pop up
+    // //   L.geoJson(data, {
+    // //     pointToLayer: function(feature, latlng) {
+    // //       var marker = L.marker(latlng, {icon: ratIcon});
+    // //       marker.bindPopup(feature.properties.Location + '<br/>' + feature.properties.OPEN_DT);
+    // //       return marker;
+    // //     }
+    // //   }).addTo(map);
+    // // });
+    //
+    //   // Rat png: Cluster (Plug in and thin out)
+    //   var rodents = L.geoJson(data, {
+    //     pointToLayer: function(feature, latlng) {
+    //       var marker = L.marker(latlng, {icon: ratIcon});
+    //       marker.bindPopup(feature.properties.Location + '<br/>' + feature.properties.OPEN_DT);
+    //       return marker;
+    //     }
+    //   });
+    //
+    //   var clusters = L.markerClusterGroup();
+    //   clusters.addLayer(rodents);
+    //   map.addLayer(clusters);
+    // });
+
+    map.setZoom(12);
+    $.getJSON("rodents.geojson",function(data) {
+      var locations = data.features.map(function(rat) {
+        // the heatmap plugin wants an array of each location
+        var location = rat.geometry.coordinates.reverse();
+        location.push(0.5);
+        return location; // e.g. [50.5, 30.5, 0.2], // lat, lng, intensity
+      });
+
+      var heat = L.heatLayer(locations, { radius: 35 });
+      map.addLayer(heat);
+    });
 
   </script>
 
