--- a/google-sheet.html
+++ b/google-sheet.html
@@ -17,9 +17,10 @@
     }
 
     #map {
-      position: absolute;
+      /* position: absolute;
       top: 0;
-      bottom: 0;
+      bottom: 0; */
+      height: 640px;
       width: 100%;
     }
 
@@ -76,6 +77,12 @@
 </head>
 
 <body>
+  <ul>
+    <h1>Studio Week 4 <br> SF Food Banks </h1>
+  	<li><a href="index.html" target="_self">Output 1</a></li>
+    <li><a class="active" href="google-sheet.html" target="_self">Output 2</a></li>
+  </ul>
+  <br>
 
   <div id='map'></div>
   <script>
@@ -177,9 +184,6 @@
         });
       };
     });
-
-
-
 
   </script>
 
