--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
 
     #map {
       width: 100%;
-      height: 100%;
+      height: 640px;
     }
   </style>
 
 </head>
 
 <body>
+  <h1>Studio Week 4 <br> Boston Rat Map </h1>
+  <ul>
+  	<li><a class="active" href="index.html" target="_self">Output 1</a></li>
+    <li><a href="google-sheet.html" target="_self">Output 2</a></li>
+  </ul>
+  <br>
 
   <div id="map"></div>
 
