--- a/google-sheet.html
+++ b/google-sheet.html
@@ -81,6 +81,7 @@
     <h1>Studio Week 4 <br> SF Food Banks </h1>
   	<li><a href="index.html" target="_self">Output 1</a></li>
     <li><a class="active" href="google-sheet.html" target="_self">Output 2</a></li>
+    <li><a href="choose-your-own-adventure.html" target="_self">Output 3</a></li>
   </ul>
   <br>
 
