--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <ul>
   	<li><a class="active" href="index.html" target="_self">Output 1</a></li>
     <li><a href="google-sheet.html" target="_self">Output 2</a></li>
+    <li><a href="choose-your-own-adventure.html" target="_self">Output 3</a></li>
   </ul>
   <br>
 
