--- a/google-sheet.html
+++ b/google-sheet.html
@@ -74,6 +74,10 @@
       border-bottom-color: rgb(61, 59, 59);
     }
   </style>
+
+  <!-- read style .css sheet -->
+  <link rel="stylesheet" href="styles.css">
+  
 </head>
 
 <body>
