--- a/choose-your-own-adventure.html
+++ b/choose-your-own-adventure.html
@@ -5,14 +5,19 @@
 
   </head>
 
+  <!-- read style .css sheet -->
+  <link rel="stylesheet" href="styles.css">
+
+
   <body>
-
-    <script>
-
-
-    </script>
+    <ul>
+      <h1>Studio Week 4 <br> Choose your own adventure! </h1>
+    	<li><a href="index.html" target="_self">Output 1</a></li>
+      <li><a href="google-sheet.html" target="_self">Output 2</a></li>
+      <li><a class="active" href="choose-your-own-adventure.html" target="_self">Output 3</a></li>
+    </ul>
+    <br>
 
   </body>
 
 </html>
-  
