--- a/choose-your-own-adventure.html
+++ b/choose-your-own-adventure.html
@@ -114,7 +114,6 @@
     </head>
 
     <body>
-      <div class="header">
       <h1 style="color:#1F2477;">Restaurants in Providence, RI</h1>
       <div class="container">
         <div class="center">
@@ -125,7 +124,6 @@
            </ul>
          </div>
        </div>
-      </div>
       <br>
 
       <div class="horizontal-center">
@@ -155,84 +153,24 @@
           transformRequest: transformRequest
         });
 
-        $(document).ready(function () {
-          $.ajax({
-            type: "GET",
-            //YOUR TURN: Replace with csv export link
-            url: 'https://docs.google.com/spreadsheets/d/1xIv9zXIUmsXvN89iPCZsB1-CsZC2KxRdyZBSPbDNAW4/gviz/tq?tqx=out:csv&sheet=Sheet1',
-            dataType: "text",
-            success: function (csvData) { makeGeoJSON(csvData); }
+        map.on('click', function(e) {
+          var features = map.queryRenderedFeatures(e.point, {
+            layers: ['providence-restaurants'] // replace this with the name of the layer
           });
 
-          function makeGeoJSON(csvData) {
-            csv2geojson.csv2geojson(csvData, {
-              latfield: 'Latitude',
-              lonfield: 'Longitude',
-              delimiter: ','
-            }, function (err, data) {
-              map.on('load', function () {
+          if (!features.length) {
+            return;
+          }
 
-                //Add the the layer to the map
-                map.addLayer({
-                  'id': 'csvData',
-                  'type': 'symbol',
-                  'source': {
-                    'type': 'geojson',
-                    'data': data
-                  },
-                  'layout': {
-                    'icon-image': './Data/star-15.svg',
-                    'icon-size': 2
-                  }
-                  // 'paint': {
-                  //   'circle-radius': 5,
-                  //   'circle-color': "purple"
-                  // }
-                });
+          var feature = features[0];
 
-
-                // When a click event occurs on a feature in the csvData layer, open a popup at the
-                // location of the feature, with description HTML from its properties.
-                map.on('click', 'csvData', function (e) {
-                  var coordinates = e.features[0].geometry.coordinates.slice();
-
-                  //set popup text
-                  //You can adjust the values of the popup to match the headers of your CSV.
-                  // For example: e.features[0].properties.Name is retrieving information from the field Name in the original CSV.
-                  var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + `Address: ` + `</b>` + e.features[0].properties.Address + `</h4>` + `<h4>` + `<b>` + `Phone: ` + `</b>` + e.features[0].properties.Phone + `</h4>`;
-
-                  // Ensure that if the map is zoomed out such that multiple
-                  // copies of the feature are visible, the popup appears
-                  // over the copy being pointed to.
-                  while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-                    coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-                  }
-
-                  //add Popup to map
-
-                  new mapboxgl.Popup()
-                    .setLngLat(coordinates)
-                    .setHTML(description)
-                    .addTo(map);
-                });
-
-                // Change the cursor to a pointer when the mouse is over the places layer.
-                map.on('mouseenter', 'csvData', function () {
-                  map.getCanvas().style.cursor = 'pointer';
-                });
-
-                // Change it back to a pointer when it leaves.
-                map.on('mouseleave', 'places', function () {
-                  map.getCanvas().style.cursor = '';
-                });
-
-                var bbox = turf.bbox(data);
-                map.fitBounds(bbox, { padding: 50 });
-
-              });
-
-            });
-          };
+          var popup = new mapboxgl.Popup({ offset: [0, -15] })
+          .setLngLat(feature.geometry.coordinates)
+          // .setHTML('<h3>' + feature.properties.name + '</h3><p>' + feature.properties.description + '</p>')
+          .setHTML(`<h3>` + feature.properties.Name + `</h3>` +
+            `<h4>` + `<b>` + `Address: ` + `</b>` + feature.properties.Address + `</h4>` +
+            `<h4>` + `<b>` + `Phone: ` + `</b>` + feature.properties.Phone + `</h4>`)
+          .addTo(map);
         });
 
       </script>
