--- a/google-sheet.html
+++ b/google-sheet.html
@@ -112,7 +112,6 @@
 </head>
 
 <body>
-  <div class="header">
   <h1 style="color:#404649;">Food Banks in San Francisco</h1>
   <div class="container">
     <div class="center">
@@ -123,7 +122,6 @@
       </ul>
     </div>
   </div>
-  <div>
   <br>
 
   <div class="horizontal-center">
@@ -181,10 +179,10 @@
               },
               'paint': {
                 'circle-radius': 5,
-                'circle-color': "purple"
+                'circle-color': "#404649",
+                'circle-opacity': 0.8
               }
             });
-
 
             // When a click event occurs on a feature in the csvData layer, open a popup at the
             // location of the feature, with description HTML from its properties.
